--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
